test_regress/t/t_disable_task_target_bad.out
%Error: t/t_disable_task_target_bad.v:23:13: Found definition of 'foo' as a VAR but expected a block/task
   23 |     disable foo;
      |             ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_disable_task_target_bad.v:24:13: Found definition of 'c' as a VAR but expected a block/task
   24 |     disable c.run;
      |             ^
%Error: t/t_disable_task_target_bad.v:24:15: Can't find definition of block/task: 'run'
   24 |     disable c.run;
      |               ^~~
%Error: Exiting due to
